--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.0"
   },
